--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="update_user_info">Update User Info</string>
     <string name="name_hint">Name</string>
     <string name="mobile_hint">Phone</string>
+    <string name="choose_image">Choose Image</string>
+    <string name="upload_image">Upload Image</string>
 </resources>
